# detection-models

./: LICENSE  README.md  pyproject.toml  requirements.txt  train.py
src/: dataset.py  hungarian_matcher.py  loss.py  modelloader.py  scheduler.py  utils.py
src/model/: detr.py
src/model/backbone/: base.py  resnet.py
src/model/neck/: decoder.py  encoder.py
src/model/utils/: feed_forward_network.py  positional_encoding.py
